feat(UI): improve UI of gallery preview

--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -34,6 +34,5 @@
   "downloading": "Downloading...",
   "see_events": "See events",
   "saved": "Saved to gallery.",
-  "edition_from_post": "Edition of a gallery is not possible from a post.",
-  "see_pictures": "See pictures"
+  "edition_from_post": "Edition of a gallery is not possible from a post."
 }
