--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -34,6 +34,5 @@
   "downloading": "Téléchargement...",
   "see_events": "Voir les événements",
   "saved": "Image sauvegardée.",
-  "edition_from_post": "L'édition d'une galerie n'est pas possible depuis un post.",
-  "see_pictures": "Voir les photos"
+  "edition_from_post": "L'édition d'une galerie n'est pas possible depuis un post."
 }
