--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">IsepLife</string>
     <string name="title_activity_main">IsepLife</string>
-    <string name="package_name">fr.iseplive.iseplife</string>
-    <string name="custom_url_scheme">fr.iseplive.iseplife</string>
+    <string name="package_name">com.iseplive.iseplife</string>
+    <string name="custom_url_scheme">com.iseplive.iseplife</string>
 </resources>
