feat(sso): login with moodle - need phone test and fix

--- a/src/translations/en/login.json
+++ b/src/translations/en/login.json
@@ -2,5 +2,6 @@
   "id": "ISEP id",
   "password": "password",
   "submit": "Log in ",
-  "use_moodle": "Please use your ISEP Moodle account credentials"
+  "use_moodle": "Please use your ISEP Moodle account credentials",
+  "sso_loggin": "Login with Moodle"
 }
