--- a/src/translations/fr/login.json
+++ b/src/translations/fr/login.json
@@ -2,5 +2,6 @@
   "id": "identifiant ISEP",
   "password": "mot de passe",
   "submit": "Se connecter",
-  "use_moodle": "Utilisez vos identifiants Moodle"
+  "use_moodle": "Utilisez vos identifiants Moodle",
+  "sso_loggin": "Connexion avec Moodle"
 }
