Revert "Implement sso portal (without browser api) (#41)"
This reverts commit fadba2be8dd98e479aca537be4abb42275765152.

--- a/src/translations/fr/login.json
+++ b/src/translations/fr/login.json
@@ -2,6 +2,5 @@
   "id": "identifiant ISEP",
   "password": "mot de passe",
   "submit": "Se connecter",
-  "use_moodle": "Utilisez vos identifiants Moodle",
-  "sso_loggin": "Connexion avec Moodle"
+  "use_moodle": "Utilisez vos identifiants Moodle"
 }
