--- a/src/translations/en/login.json
+++ b/src/translations/en/login.json
@@ -2,6 +2,5 @@
   "id": "ISEP id",
   "password": "password",
   "submit": "Log in ",
-  "use_moodle": "Please use your ISEP Moodle account credentials",
-  "sso_loggin": "Login with Moodle"
+  "use_moodle": "Please use your ISEP Moodle account credentials"
 }
