--- a/src/translations/fr/login.json
+++ b/src/translations/fr/login.json
@@ -4,5 +4,6 @@
   "submit": "Se connecter",
   "use_moodle": "Utilisez vos identifiants Moodle",
   "sso_loggin": "Connexion avec Moodle",
-  "alternative": "Connexion alternative"
+  "alternative": "Connexion alternative",
+  "bad_login": "Mauvais mot de passe ou utilisateur"
 }
